Added vastuse koht

--- a/src/main/resources/public/arvutus1.html
+++ b/src/main/resources/public/arvutus1.html
@@ -22,5 +22,6 @@
     <input type="number" id="kast1">
     <input type="number" id="kast2">
     <input type="button" value="Leia geomeetriline keskmine" onclick="arvutamine()">
+    <div id="vastus">Vastuse koht</div>
   </body>
 </html>
