--- a/src/main/resources/public/arvutus3.html
+++ b/src/main/resources/public/arvutus3.html
@@ -22,8 +22,8 @@
   <body>
     <input type="number" id="kast1">
     <input type="number" id="kast2">
-    <input type="checkbox" id="kast3" checked>
-    <input type="hidden" id="kast4">
+    <input type="text" id="kast3">
+    <input type="checkbox" id="kast4" checked>
     <input type="button" value="Arvuta hind" onclick="arvutamine()">
     <div id="vastus">Vastuse koht</div>
   </body>
